tests/syntax_error/bad_expression.jou
def main() -> int:
    return ->  # Error: expected an expression, got '->'
